methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:17: error: Unit does not take parameters
    DogHouse();
            ^MethodsDogHouse:24: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:30: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:40: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:50: error: not found: value dogHouse
		dogHouse();		
                ^